tests/baselines/reference/namespaceImportTypeQuery4.errors.txt
/a.ts(1,24): error TS2792: Cannot find module './z'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
/b.ts(3,3): error TS2353: Object literal may only specify known properties, and 'A' does not exist in type 'typeof import("/a")'.


==== /a.ts (1 errors) ====
    import type { A } from './z'; // unresolved
                           ~~~~~
!!! error TS2792: Cannot find module './z'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    type A = 0;
    export { A };
    export class B {};
    
==== /b.ts (1 errors) ====
    import * as types from './a';
    let t: typeof types = {
      A: undefined as any, // error
      ~
!!! error TS2353: Object literal may only specify known properties, and 'A' does not exist in type 'typeof import("/a")'.
      B: undefined as any,
    }
    